tdf#158950 Paste as RTF loses char color and paragraph alignment from styles

This logic partially originated in

    commit 8e8f9388c323ad3c32cef3f91609ad19386b7d56
    Author: Miklos Vajna <vmiklos@collabora.co.uk>
    Date:   Tue Apr 22 12:53:24 2014 +0200
Related: fdo#77600 RTF import: RTFValue::equals: compare attribute
content

But it is rather weird to compare RTFSprms this way, comparing each
attribute to a parent RTFValue.

Making the comparison more "normal" fixes the reported bug while not
breaking fdo#77600

Change-Id: Iee224c7bc9542c359f8a71086230e4b53c1c3e16
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/162164
Reviewed-by: Regina Henschel <rb.henschel@t-online.de>
Tested-by: Jenkins
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>
(cherry picked from commit f6a559ccacaab875d1aa1da70e3011592158e9d4)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/162142
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>